Bugfix - delete, openapi extended
